<resources>

    <string name="app_name">Field Assistant</string>
    <string name="default_recipient">Default Recipient</string>
    <string name="change_recipient">Change</string>
    <string name="return_default">Default</string>
    <string name="send_message">SEND</string>
    <string name="use_camera">Camera</string>
    <string name="from_photos">Photos</string>

    <string name="message_hint">Enter Message</string>
    <string name="email_hint">Recipient e-mail</string>
    <string name="location_hint">NO LOCATION</string>
    <string name="date_hint">NO DATE</string>

    <string name="manage_label">Manage App</string>

    <string name="no_wifi_text">Wifi needed to get city and country.</string>
    <string name="no_default_set">No default set</string>

    <!--Toast Text-->
    <string name="location_enabled">Location Enabled</string>
    <string name="location_disabled">Location Disabled</string>
    <string name="services_disabled">Location Services Disabled</string>
    <string name="file_not_found">Image File Not Found</string>
    <string name="permission_not_granted">Permission Not Granted</string>
    <string name="default_recipient_set">Default Recipient Set</string>
    <string name="default_recipient_not_set">Default Recipient Not Set</string>

    <!--Default Recipient Dialog Box Strings-->
    <string name="dialogue_title">Set Default Recipient</string>
    <string name="dialogue_prompt_0">Make\ </string>
    <string name="dialogue_prompt_1">\ default recipient.</string>
    <string name="dialogue_yes">Yes</string>
    <string name="dialogue_no">No</string>


    <string name="title_activity_group">Settings</string>

    <!-- Strings related to Settings -->
    <string name="default_recipient_title">Default Recipient</string>
    <string name="default_recipient_hint">default@email.com</string>

    <!--Report settings-->
    <string name="pref_header_report">Report</string>

    <string name="date_format_title">Date Format</string>
    <string-array name="date_formats">
        <item>Jan 01, 2018 01:30 PM</item>
        <item>Mon, Jan 01 01:30 PM \'timezone\'</item>
        <item>January 01, 2018 at 01:30 PM \'timezone\'</item>
        <item>January 01, 2018</item>
    </string-array>
    <string-array name="date_format_strings">
        <item>MMM dd, yyyy hh:mm a</item>
        <item>EEE, MMM dd, yyyy hh:mm a z</item>
        <item>MMMM dd, yyyy \'at\' hh:mm a z</item>
        <item>MMMM dd, yyyy</item>
    </string-array>

    <string name="location_format_title">location Format</string>
    <string-array name="location_formats">
        <item>Country</item>
        <item>City, (State), Country</item>
        <item>Longitude and Latitude</item>
        <item>All of the above</item>
    </string-array>
    <string-array name="location_format_index">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string name="subject_format_title">Default Subject Line</string>
    <string name="subject_format_hint">Set Default Subject</string>

    <!-- Settings Header -->
    <string name="pref_header_settings">Settings</string>
    <string name="pref_header_credits">Credits</string>

    <string name="special_thanks_title">Special Thanks To</string>
    <string name="special_thanks_0">\ \ \ \ \ \ \ Matt Cook for the idea of the app.</string>
    <string name="special_thanks_1">\ \ \ \ \ \ \ Samaritain\'s Purse for making known the need to capture this information in one place. I hope it is useful to many more users than you.</string>
    <string name="special_thanks_2">\ \ \ \ \ \ \ Chad Waters for your help thinking through the creation of the app.</string>
    <string name="special_thanks_3">\ \ \ \ \ \ \ Blake Nelson for writing the IOS version of the app, designing the logo, and designing the visual layouts.</string>

    <string name="image_credits_title">Image Credits</string>
    <string name="image_credits_0">\ \ \ \ \ \ \ Camera icon made by Daniel Bruce from www.flaticon.com</string>
    <string name="image_credits_1">\ \ \ \ \ \ \ Photos icon made by Creaticca Creative Agency from www.flaticon.com</string>
    <string name="image_credits_2">\ \ \ \ \ \ \ Report icon made by Designerz Base from www.flaticon.com</string>
    <string name="image_credits_3">\ \ \ \ \ \ \ Credits icon made by Freepik from www.flaticon.com</string>
    <string name="image_credits_4">\ \ \ \ \ \ \ Field Assistant icon made by Blake Nelson, the author of the IOS version of Field Assistant</string>

    <string name="comments_request_title">Comments Welcome</string>
    <string name="comments_request_0">This App has been developed with many uses and many people in mind. Even still, I could not think of all the possible uses and opinions of all the possible users.</string>
    <string name="comments_request_1">Please contact me at andyrock.cook@gmail.com with the subject \"Field Assistant\" and let me know of ideas, preferences, and other customizations you would like to see in the future.</string>

</resources>

    <!--<string name=""></string>-->