<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">


    <!--put credits here-->
    <PreferenceCategory
        android:title="@string/special_thanks_title"/>
    <PreferenceCategory
        android:title="@string/special_thanks_0"/>
    <PreferenceCategory
        android:title="@string/special_thanks_1"/>
    <PreferenceCategory
        android:title="@string/special_thanks_2"/>
    <PreferenceCategory
        android:title="@string/special_thanks_3"/>

    <PreferenceCategory
        android:title="@string/image_credits_title"/>
    <PreferenceCategory
        android:title="@string/image_credits_0"/>
    <PreferenceCategory
        android:title="@string/image_credits_1"/>
    <PreferenceCategory
        android:title="@string/image_credits_2"/>
    <PreferenceCategory
        android:title="@string/image_credits_3"/>
    <PreferenceCategory
        android:title="@string/image_credits_4"/>
</PreferenceScreen>