<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!--Default Recipient-->
    <EditTextPreference
        android:defaultValue=" "
        android:key="default_recipient"
        android:maxLines="1"
        android:hint="@string/default_recipient_hint"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/default_recipient_title" />

    <!--Default Subject-->
    <EditTextPreference
        android:defaultValue=" "
        android:key="default_subject"
        android:hint="@string/subject_format_hint"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/subject_format_title" />

    <!--Prefered Date Format-->
    <ListPreference
        android:defaultValue="MMM dd, yyyy hh:mm a"
        android:entries="@array/date_formats"
        android:entryValues="@array/date_format_strings"
        android:key="date_format"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/date_format_title" />

    <!--Prefered Location Format-->
    <ListPreference
        android:defaultValue="3"
        android:entries="@array/location_formats"
        android:entryValues="@array/location_format_index"
        android:key="location_format"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/location_format_title" />

</PreferenceScreen>