<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:background="#1331"
	android:layout_margin="8dp"
	android:orientation="vertical">


	<ImageView
		android:id="@+id/field_image_3"
		android:layout_width="0dp"
		android:layout_height="90dp"
		android:layout_marginBottom="8dp"
		android:layout_marginStart="8dp"
		android:layout_marginTop="8dp"
		app:layout_constraintBottom_toTopOf="@+id/choose_recipient"
		app:layout_constraintDimensionRatio="2:3"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintVertical_chainStyle="spread" />

	<TextView
		android:id="@+id/date_text"
		android:layout_width="0dp"
		android:layout_height="0dp"
		android:layout_marginEnd="8dp"
		android:layout_marginStart="8dp"
		android:layout_marginTop="8dp"
		android:textAlignment="center"
		android:gravity="center"
		android:text="@string/date_hint"
		android:textSize="18sp"
		app:layout_constraintBottom_toTopOf="@+id/location_text"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toEndOf="@+id/field_image_3"
		app:layout_constraintTop_toTopOf="parent" />

	<TextView
		android:id="@+id/location_text"
		android:layout_width="0dp"
		android:layout_height="0dp"
		android:layout_marginBottom="8dp"
		android:layout_marginEnd="8dp"
		android:layout_marginStart="8dp"
		android:textAlignment="center"
		android:gravity="center"
		android:text="@string/location_hint"
		android:textSize="18sp"
		app:layout_constraintBottom_toTopOf="@+id/choose_recipient"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toEndOf="@+id/field_image_3"
		app:layout_constraintTop_toBottomOf="@+id/date_text"
		app:layout_constraintVertical_bias="0.0" />

	<Button
		android:id="@+id/location_button"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginBottom="8dp"
		android:layout_marginEnd="8dp"
		android:layout_marginStart="8dp"
		android:layout_marginTop="8dp"
		android:background="?android:attr/selectableItemBackground"
		android:text=" "
		android:textSize="37sp"
		app:layout_constraintBottom_toTopOf="@+id/field_message_3"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toEndOf="@+id/field_image_3"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintVertical_bias="0.48000002" />

	<EditText
		android:id="@+id/field_message_3"
		android:layout_width="0dp"
		android:layout_height="0dp"
		android:layout_marginBottom="8dp"
		android:layout_marginEnd="8dp"
		android:layout_marginStart="8dp"
		android:layout_marginTop="8dp"
		android:background="@drawable/edit_text_style"
		android:gravity="top"
		android:hint="@string/message_hint"
		android:padding="5dp"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/choose_recipient" />

	<EditText
		android:id="@+id/choose_recipient"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginEnd="8dp"
		android:layout_marginStart="8dp"
		android:layout_marginTop="8dp"
		android:padding="5dp"
		android:maxLines="1"
		android:visibility="invisible"
		android:hint="@string/email_hint"
		android:background="@drawable/edit_text_style"
		app:layout_constraintEnd_toStartOf="@+id/change_button"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintTop_toBottomOf="@id/field_image_3" />

	<TextView
		android:id="@+id/display_default"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginBottom="8dp"
		android:layout_marginEnd="8dp"
		android:layout_marginStart="8dp"
		android:layout_marginTop="8dp"
		android:background="@drawable/edit_text_style"
		android:hint="@string/default_recipient"
		android:padding="5dp"
		android:textSize="18sp"
		android:visibility="visible"
		android:maxLines="1"
		app:layout_constraintBottom_toTopOf="@+id/field_message_3"
		app:layout_constraintEnd_toStartOf="@+id/change_button"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@id/field_image_3" />

	<Button
		android:id="@+id/change_button"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginEnd="8dp"
		android:text="@string/change_recipient"
		app:layout_constraintBottom_toTopOf="@+id/field_message_3"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/location_text" />

</android.support.constraint.ConstraintLayout>